2013-02-15  Andreas Kling  <akling@apple.com>

        Unbreak webkit-patch -- can't have both Committer and Contributor entry with same e-mail address.

        * Scripts/webkitpy/common/config/committers.py:

2013-02-15  Joanmarie Diggs  <jdiggs@igalia.com>

        Unreviewed. Add myself as a committer.

        * Scripts/webkitpy/common/config/committers.py:

2013-02-15  Ryosuke Niwa  <rniwa@webkit.org>

        NRWT: ML Debug Test bot is timing out after cleaning up ports
        https://bugs.webkit.org/show_bug.cgi?id=109912

        Reviewed by Simon Fraser.

        Added more debug messgaes to diagnose the issue.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        (Manager.run):

2013-02-15  Claudio Saavedra  <csaavedra@igalia.com>

        Unreviewed. Add myself as a committer.

        * Scripts/webkitpy/common/config/committers.py:

2013-02-15  Christophe Dumez  <ch.dumez@sisa.samsung.com>

        Unreviewed. Update Yi Shen, Antonio Gomes and Laszlo Gombos'
        emails on their behalf.

        * Scripts/webkitpy/common/config/committers.py:

2013-02-15  Andrey Lushnikov  <lushnikov@chromium.org>

        Web Inspector: implement smart braces functionality
        https://bugs.webkit.org/show_bug.cgi?id=109200

        Reviewed by Pavel Feldman.

        Fix eventSender.keyDown implementation to correctly process opening
        round brace symbol.

        * DumpRenderTree/chromium/TestRunner/src/EventSender.cpp:
        (WebTestRunner):
        (WebTestRunner::EventSender::keyDown):

2013-02-15  Jochen Eisinger  <jochen@chromium.org>

        Speculative build fix for chromium-win.

        Unreviewed build fix.

        Add declarations of the copy constructor and assignment operator to
        WebTestProxyBase, so VS doesn't try to generate them.

        * DumpRenderTree/chromium/TestRunner/public/WebTestProxy.h:

2013-02-15  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Port GCController to JSC C API