@@ -1,3 +1,9 @@
+2013-02-15  Roger Fong  <roger_fong@apple.com>
+
+        Get Win EWS startup script checked into tree so we can make changes to all the EWS bots more easily.
+
+        * EWSTools/start-queue-win.sh: Added.
+
 2013-02-15  Andreas Kling  <akling@apple.com>
 
         Unbreak webkit-patch -- can't have both Committer and Contributor entry with same e-mail address.
